# CxxExperiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
01-SemanticVersioning/: CMakeLists.txt  README.md  SemanticVersion.cpp  SemanticVersion.h  VersionRange.cpp  VersionRange.h  main.cpp
02-RangesAndViews/: CMakeLists.txt  City.cpp  City.h  README.md  main.cpp
02-RangesAndViews/data/: cities.csv
03-MoveSemantics/: CMakeLists.txt  Message.cpp  Message.h  README.md  main.cpp  move_semantics.cpp
04-Initialization/: CMakeLists.txt  README.md  initialization.cpp
05-SellingWood/: CMakeLists.txt  README.md  main.cpp  slab.cpp  slab.h  solution.h
06-N_Back/: CMakeLists.txt  NBackSequence.cpp  NBackSequence.h  NBackTest.cpp  NBackTest.h  README.md  main.cpp
07-Constness/: CMakeLists.txt  README.md  main.cpp
08-Templates/: Makefile  README.md  main.cpp  template.cpp  template.h  templates
09-Coroutines/: CMakeLists.txt  README.md  card_dealer.cpp
10-CakeMachine/: CMakeLists.txt  README.md  Shelf.cpp  Shelf.h  Workstation.h  cake_machine.cpp
11-ThreadPools/: BackgroundTask.cpp  BackgroundTask.h  CMakeLists.txt  Progress.cpp  Progress.h  ProgressView.cpp  ProgressView.h  README.md  ThreadPool.cpp  ThreadPool.h  main.cpp  pool.cpp
12-DateTime/: CMakeLists.txt  README.md  clock.cpp
shared/: mingw-getopt.h  mygetopt.h
