cmake_minimum_required(VERSION 3.10)
project(CxxExpriments)

add_subdirectory(01-SemanticVersioning)
add_subdirectory(02-RangesAndViews)
add_subdirectory(03-MoveSemantics)
add_subdirectory(04-Initialization)
add_subdirectory(05-SellingWood)
add_subdirectory(06-N_Back)
add_subdirectory(07-Constness)
# uses make: add_subdirectory(08-Templates)
add_subdirectory(09-Coroutines)
